Updated PHPStan identifiers

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,3 +9,4 @@ parameters:
         - identifier: argument.type
         - identifier: missingType.iterableValue
         - identifier: foreach.nonIterable
+        - identifier: cast.string
