--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2.1
 orbs:
   ci-tools: kanopi/ci-tools@2
 
+PHP_VERSION: &PHP_VERSION "8.2"
+
 workflows:
   test:
     jobs:
@@ -14,32 +16,50 @@ workflows:
 #            branches:
 #              only: /.*/
       - ci-tools/composer:
-          tag: '8.2'
+          tag: *PHP_VERSION
           name: 'phpstan'
           context: kanopi-code
-          command: 'check:security'
+          command: 'check:security:circleci'
           filters:
             tags:
               ignore: /.*/
             branches:
               only: /.*/
+          post-steps:
+            - store_test_results:
+                path: phpstan-report.xml
+            - store_artifacts:
+                path: phpstan-report.xml
+                destination: phpstan
       - ci-tools/composer:
-          tag: '8.2'
+          tag: *PHP_VERSION
           name: 'rector'
           context: kanopi-code
-          command: 'check:rector'
+          command: 'check:rector:circleci'
           filters:
             tags:
               ignore: /.*/
             branches:
               only: /.*/
+          post-steps:
+            - store_test_results:
+                path: rector-report.xml
+            - store_artifacts:
+                path: rector-report.xml
+                destination: rector
       - ci-tools/composer:
-          tag: '8.2'
-          name: 'lint'
+          tag: *PHP_VERSION
+          name: 'quality'
           context: kanopi-code
-          command: 'check:code'
+          command: 'check:code:circleci'
           filters:
             tags:
               ignore: /.*/
             branches:
               only: /.*/
+          post-steps:
+            - store_test_results:
+                path: phpcs-report.xml
+            - store_artifacts:
+                path: phpcs-report.xml
+                destination: phpcs
